# Backy

./: .gitignore  Cargo.toml  README.md  config.example.json
.github/workflows/: main.yml  master.yml
src/: config.rs  logger.rs  main.rs  opts.rs
src/opts/: add.rs  config.rs  list.rs  mod.rs  pull.rs  push.rs  remove.rs  restore.rs  vault.rs
