[package]
name = "backy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
config-file = { version = "0.2.3", features = ["json"] }
log = "0.4.20"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
