[package]
name = "backy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
config-file = { version = "0.2.3", features = ["json"] }
env_logger = "0.10.1"
generator = "0.7.5"
log = "0.4.20"
once_cell = "1.19.0"
preferences = { git = "https://github.com/andybarron/preferences-rs", version = "2.0.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = {version = "1.0.193", features = ["deserialize_in_place"] }
serde_json = "1.0.108"
walkdir = "2.4.0"
